--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dev": "^0.1.3",
     "hapi": "^16.1.1",
+    "inert": "^4.2.0",
     "react": "^15.5.3",
     "react-dom": "^15.5.3"
   }
